@@ -1,0 +1,14 @@
+#----------------------------------------------------------------------
+# Name:        wxPython.lib.mixins
+# Purpose:     A package for helpful wxPython mix-in classes
+#
+# Author:      Robin Dunn
+#
+# Created:     15-May-2001
+# RCS-ID:      $Id$
+# Copyright:   (c) 2001 by Total Control Software
+# Licence:     wxWindows license
+#----------------------------------------------------------------------
+
+
+
